--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="index.css">
 <head>
 <title>Home Page</title>
+    <link rel="stylesheet" href="css/index.css">
+    <meta charset="UTF-8">
 </head>
 <body>
+    <header id="header">
+        <div class="upper">
+            <div class="left-header">
+                <img src="img/h-logo.png" alt="MegaSport">
+            </div>
+            <div class="right-header">
+                <ul class="filter-gender">
+                    <li class="filter-g-item"><a class="main-h" href="#">Homem</a></li>
+                    <li class="filter-g-item"><a class="main-h" href="#">Mulher</a></li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="submenus">
+            <ul class="ul-sub">
+                <li class="sub-items" id="ub-items"><a class="a-col" href="">Futebol</a></li>
+                <li class="sub-items" id="ub-items"><a class="a-col" href="">Natação</a></li>
+                <li class="sub-items" id="ub-items"><a class="a-col" href="">Bodybuilding</a> </li>
+                <li class="sub-items" id="ub-items"><a class="a-col" href="">BasketBall</a></li>
+            </ul>
+        </div>
+    </header>
 
+    <div class="container">
 
-
+    </div>
 </body>
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/index.js"></script>
+
 </html>
