footer upper footer

--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -33,6 +33,17 @@
 
     </div>
 </body>
+<footer>
+    <div class="ava">
+        <div class="ava-content">
+            <h2>Estamos Dispostos a Ouvi-los</h2>
+            <button class="but form-redir">Dar Opinião</button>   
+        </div>
+    </div>
+    <div class="footer-bottom">
+
+    </div>
+</footer>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/index.js"></script>
 
