--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -41,7 +41,22 @@
         </div>
     </div>
     <div class="footer-bottom">
+        <div class="footer-container">
 
+            <div class="left-f">
+                <img src="img/footerlogo.png" alt="">
+            </div>
+
+            <div class="right-f">
+                <ul class=" lista-footer">
+                    <li>Sobre nós</li>
+                    <li>Lojas</li>
+                    <li>Contactos</li>
+                    <li>Opiniões</li>
+                </ul>
+            </div>
+
+        </div>
     </div>
 </footer>
 <script src="js/jquery-3.2.1.min.js"></script>
