--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -8,7 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- index css stylesheet -->
     <link rel="stylesheet" href="css/index.css">
+    <!-- define language characters -->
     <meta charset="UTF-8">
 </head>
 <body>
