--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -85,8 +85,9 @@
             </div>
         </div>
     </footer>
-
+    <!-- JQUERY -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/index.js"></script>
+    <!-- ------ -->
 </body>
 </html>
