criação dos ficheiros js css e html dos outros
é so adicionar conteudos no container

--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- index css stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
+    <!-- form css stylesheet -->
+    <link rel="stylesheet" href="css/form.css">
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
     <!-- define language characters -->
@@ -40,7 +40,7 @@
     </header>
 
     <div class="container">
-        
+
     </div>
 
     <footer>
@@ -88,8 +88,8 @@
     <!-- JQUERY -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Header-footer js -->
-    <script src="js/header-footer.js"></script>
-    <!-- indexjs -->
-    <script src="js/index.js"></script>
+   <script src="js/header-footer.js"></script>
+   <!-- formjs -->
+   <script src="js/form.js"></script>
 </body>
 </html>
