--- a/srcproj/detalhe.html
+++ b/srcproj/detalhe.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- index css stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
+    <!-- detalhe css stylesheet -->
+    <link rel="stylesheet" href="css/detalhe.css">
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
     <!-- define language characters -->
@@ -89,7 +89,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Header-footer js -->
     <script src="js/header-footer.js"></script>
-    <!-- indexjs -->
-    <script src="js/index.js"></script>
+    <!-- detalhe.js -->
+    <script src="js/detalhe.js"></script>
 </body>
 </html>
