--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- index css stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
+    <!-- listagem css stylesheet -->
+    <link rel="stylesheet" href="css/listagem.css">
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
     <!-- define language characters -->
@@ -40,7 +40,7 @@
     </header>
 
     <div class="container">
-        
+
     </div>
 
     <footer>
@@ -89,7 +89,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Header-footer js -->
     <script src="js/header-footer.js"></script>
-    <!-- indexjs -->
-    <script src="js/index.js"></script>
+    <!-- listagemjs -->
+    <script src="js/listagem.js"></script>
 </body>
 </html>
