--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -34,7 +34,7 @@
                 <li class="sub-items"><a class="a-col" href="">Futebol</a></li>
                 <li class="sub-items"><a class="a-col" href="">Natação</a></li>
                 <li class="sub-items"><a class="a-col" href="">Bodybuilding</a> </li>
-                <li class="sub-items"><a class="a-col" href="">BasketBall</a></li>
+                <li class="sub-items"><a class="a-col" href="">Basketball</a></li>
             </ul>
         </div>
     </header>
