--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="footer-rights">
             <div class="text-footer">
-                <p>2021 ©MegaSport. Desenvolvido por Joel Araújo, Marco Araújo, Diogo Silva.</p>
+                <p>2021 ©MegaSport. Desenvolvido por Joel Araújo, Marco Araújo, Diogo Silvaa.</p>
             </div>
         </div>
     </footer>
