--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -40,16 +40,19 @@
     </header>
 
     <div class="container">
-
+        <form action="POST">
+            <div class="title-area">
+                <h2>Preencha o formulário para dar a sua opinião</h2>
+                <h3>Seja o mais honesto possivel</h3>
+                <hr>
+            </div>
+            <input type="text" name="nomecli" id="nomecli" placeholder="Nome" value="">
+            <input type="email" name="emailcli" id="emailcli" placeholder="E-mail" value="">
+            <input type="text">
+        </form>
     </div>
 
     <footer>
-        <div class="ava">
-            <div class="ava-content">
-                <h2>Estamos Dispostos a Ouvi-lo</h2>
-                <button class="but form-redir">Dar Opinião</button>   
-            </div>
-        </div>
         <div class="footer-bottom">
             <div class="footer-container">
                 <div class="row row-footer">
