--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -8,10 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- index css stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
+    <!-- index css stylesheet -->
+    <link rel="stylesheet" href="css/index.css">
     <!-- define language characters -->
     <meta charset="UTF-8">
 </head>
@@ -39,8 +39,25 @@
         </div>
     </header>
 
+    <div class="bannercontainer">
+        <img src="img/bannerIndex.png" alt="BannerSaldos">
+    </div>
+
     <div class="container">
-        
+        <div class="wrapper1">
+            <div class="row">
+                <div class="col-sm-6">
+                    <ul class="list-gender"> 
+                        <li class="li-title">Homem</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="list-gender">
+                        <li class="li-title">Mulher</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
