--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -15,7 +15,7 @@
     <!-- define language characters -->
     <meta charset="UTF-8">
 </head>
-<body>
+<body onload="ready()">
     <header id="header">
         <div class="upper">
             <div class="left-header">
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div id="container" class="container">
 
     </div>
 
@@ -92,4 +92,11 @@
     <!-- listagemjs -->
     <script src="js/listagem.js"></script>
 </body>
+<script>
+    function ready() {
+
+            loadData();
+      }
+</script>
+
 </html>
