--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -44,16 +44,28 @@
     </div>
 
     <div class="container">
+        <div class="about-us">
+            <!-- title centrado -->
+            <!-- p(o maximo de marcas de texto) -->
+        </div>
         <div class="wrapper1">
             <div class="row">
                 <div class="col-sm-6">
                     <ul class="list-gender"> 
                         <li class="li-title">Homem</li>
+                        <li class="regular-li">Futbol</li>
+                        <li class="regular-li">Natação</li>
+                        <li class="regular-li">Bodybuilding</li>
+                        <li class="regular-li">Basketball</li>
                     </ul>
                 </div>
                 <div class="col-sm-6">
                     <ul class="list-gender">
                         <li class="li-title">Mulher</li>
+                        <li class="regular-li"><a href="#">Futbol</a></li>
+                        <li class="regular-li">Natação</li>
+                        <li class="regular-li">Bodybuilding</li>
+                        <li class="regular-li">Basketball</li>
                     </ul>
                 </div>
             </div>
