--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -44,19 +44,67 @@
     </div>
 
     <div class="container">
+        <section id="aboutUs">
+            <div class="about-us">
+                <p class="title-about">Sobre Nós</p>
+            
+                <p>Você está na <em><strong> MegaSport</strong></em>, o melhor lugar para encontrar <em> produtos de desporto.</em><br>
+                  <em> Sabia que nós trabalhamos apenas com os fornecedores mais confiáveis do mercado?</em> Pois é! Isso significa que todos os produtos que você encontrar no nosso site certamente serão da <strong><em>mais alta qualidade.</em></strong>  <br>
+                   Vá em frente! Aqui na <em><strong> MegaSport</strong></em>, nós acreditamos num serviço de atendimento aos clientes de altíssima qualidade – mas também somos da opinião de que todos os nossos clientes merecem vivenciar uma experiência de compra inesquecível, e é por isso que tentamos proporcionar <strong><em> produtos excelentes a um preço acessível.</em></strong></p>
+                <!-- title centrado -->
+                <!-- p(o maximo de marcas de texto) -->
+            </div>
+        </section>
         <div class="wrapper1">
             <div class="row">
                 <div class="col-sm-6">
                     <ul class="list-gender"> 
                         <li class="li-title">Homem</li>
+                        <li class="regular-li"><a href="#">Futebol</a></li>
+                        <li class="regular-li"><a href="#">Natação</a></li>
+                        <li class="regular-li"><a href="#">Bodybuilding</a></li>
+                        <li class="regular-li"><a href="#">Basketball</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6">
                     <ul class="list-gender">
                         <li class="li-title">Mulher</li>
+                        <li class="regular-li"><a href="#">Futebol</a></li>
+                        <li class="regular-li"><a href="#">Natação</a></li>
+                        <li class="regular-li"><a href="#">Bodybuilding</a></li>
+                        <li class="regular-li"><a href="#">Basketball</a></li>
                     </ul>
                 </div>
             </div>
+        </div>
+        <div class="waper-horario">
+            <div class="sep">
+                <h2>Horário de funcionamento</h2>
+            </div>
+            <table>
+                <colgroup span="5"></colgroup>
+                <thead>
+                    <tr class="header">
+                        <th>Segunda</th>
+                        <th>Terça</th>
+                        <th>Quarta</th>
+                        <th>Quinta</th>
+                        <th>Sexta</th>
+                   </tr>
+                   </thead>
+                   <tbody>
+                    <tr>
+                        <td>8:30 ás 18:00</td>
+                        <td>8:30 ás 18:00</td>
+                        <td>8:30 ás 18:00</td>
+                        <td>8:30 ás 18:00</td>
+                        <td>8:30 ás 18:00</td>
+                    </tr>                                       
+                   </tbody>
+                   <tfoot><tr>
+                    <td colspan="5" style="text-align:center">
+                    Fechado aos fins de semana.</td></tr></tfoot>                                    
+              </table>
         </div>
     </div>
 
@@ -78,7 +126,7 @@
                     <div class="col-sm-4">
                         <ul class="lista-footer">
                             <li class="list-title">MegaSport</li>
-                            <li><a href="">Sobre nós</a></li>
+                            <li><a href="#aboutUs">Sobre nós</a></li>
                             <li><a href="">Lojas</a></li>
                             <li><a href="">Contactos</a></li>
                             <li><a href="">Opiniões</a></li>
@@ -89,7 +137,7 @@
                             <li class="list-title">Contactos</li>
                             <li><a href="">+351 911 911 911</a></li>
                             <li><a href="">MegaSport@email.pt</a></li>
-                            <li><a href="">Segunda a sexta das 8:30 ás 18:00</a></li>
+                            <li><a href="">Abertos das 8:30 as 18:00</a></li>
                             <li><a href="">Dar Opinião</a></li>
                         </ul>
                     </div>
