--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <div id="container" class="container">
+    <div id="container" class="container clearfix">
 
     </div>
 
