--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -46,13 +46,16 @@
     <div class="container">
         <section id="aboutUs">
             <div class="about-us">
-                <p class="title-about">Sobre Nós</p>
-            
+                <div class="waper-about-us">
+                    <div class="title">
+                        <h2>Sobre Nós</h2>
+                    </div>
+                <div class="AboutUs">
                 <p>Você está na <em><strong> MegaSport</strong></em>, o melhor lugar para encontrar <em> produtos de desporto.</em><br>
                   <em> Sabia que nós trabalhamos apenas com os fornecedores mais confiáveis do mercado?</em> Pois é! Isso significa que todos os produtos que você encontrar no nosso site certamente serão da <strong><em>mais alta qualidade.</em></strong>  <br>
                    Vá em frente! Aqui na <em><strong> MegaSport</strong></em>, nós acreditamos num serviço de atendimento aos clientes de altíssima qualidade – mas também somos da opinião de que todos os nossos clientes merecem vivenciar uma experiência de compra inesquecível, e é por isso que tentamos proporcionar <strong><em> produtos excelentes a um preço acessível.</em></strong></p>
-                <!-- title centrado -->
-                <!-- p(o maximo de marcas de texto) -->
+                </div>
+            </div>
             </div>
         </section>
         <div class="wrapper1">
