--- a/srcproj/detalhe.html
+++ b/srcproj/detalhe.html
@@ -42,10 +42,10 @@
     <div id="container" class="container">
         <div class="card">
             <div class="img-holder">
-                <img id="image" src="" style="width:100%">
+                <img id="image" src="" >
             </div>
             <div class="text-holder">
-                <h3 id="name"></h3>
+                <p id="name"></p>
                 <p id="price" class="price"></p>
                 <p id="size"></p>
                 <p id="sexo"></p>
