--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -1,112 +1,163 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-<title>Home Page</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- footer and header css -->
-    <link rel="stylesheet" href="css/header-footer.css">
-    <!-- index css stylesheet -->
-    <link rel="stylesheet" href="css/index.css">
-    <!-- define language characters -->
-    <meta charset="UTF-8">
-</head>
-<body>
-    <header id="header">
-        <div class="upper">
-            <div class="left-header">
-                <img src="img/h-logo.png" alt="MegaSport">
+    <!DOCTYPE html>
+    <html lang="pt">
+    <head>
+    <title>Home Page</title>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <!-- footer and header css -->
+        <link rel="stylesheet" href="css/header-footer.css">
+        <!-- index css stylesheet -->
+        <link rel="stylesheet" href="css/index.css">
+        <!-- define language characters -->
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <header id="header">
+            <div class="upper">
+                <div class="left-header">
+                    <img src="img/h-logo.png" alt="MegaSport">
+                </div>
+                <div class="right-header">
+                    <ul class="filter-gender">
+                        <li class="filter-g-item"><a class="main-h" href="#">Homem</a></li>
+                        <li class="filter-g-item"><a class="main-h" href="#">Mulher</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="right-header">
-                <ul class="filter-gender">
-                    <li class="filter-g-item"><a class="main-h" href="#">Homem</a></li>
-                    <li class="filter-g-item"><a class="main-h" href="#">Mulher</a></li>
+            
+            <div class="submenus">
+                <ul class="ul-sub">
+                    <li class="sub-items"><a class="a-col" href="">Futebol</a></li>
+                    <li class="sub-items"><a class="a-col" href="">Natação</a></li>
+                    <li class="sub-items"><a class="a-col" href="">Bodybuilding</a> </li>
+                    <li class="sub-items"><a class="a-col" href="">Basketball</a></li>
                 </ul>
             </div>
-        </div>
-        
-        <div class="submenus">
-            <ul class="ul-sub">
-                <li class="sub-items"><a class="a-col" href="">Futebol</a></li>
-                <li class="sub-items"><a class="a-col" href="">Natação</a></li>
-                <li class="sub-items"><a class="a-col" href="">Bodybuilding</a> </li>
-                <li class="sub-items"><a class="a-col" href="">Basketball</a></li>
-            </ul>
-        </div>
-    </header>
+        </header>
 
-    <div class="bannercontainer">
-        <img src="img/bannerIndex.png" alt="BannerSaldos">
-    </div>
-
-    <div class="container">
-        <div class="wrapper1">
-            <div class="row">
-                <div class="col-sm-6">
-                    <ul class="list-gender"> 
-                        <li class="li-title">Homem</li>
-                    </ul>
-                </div>
-                <div class="col-sm-6">
-                    <ul class="list-gender">
-                        <li class="li-title">Mulher</li>
-                    </ul>
-                </div>
-            </div>
+        <div class="bannercontainer">
+            <img src="img/bannerIndex.png" alt="BannerSaldos">
         </div>
-    </div>
 
-    <footer>
-        <div class="ava">
-            <div class="ava-content">
-                <h2>Estamos Dispostos a Ouvi-lo</h2>
-                <button class="but form-redir">Dar Opinião</button>   
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="footer-container">
-                <div class="row row-footer">
-                    <div class="col-sm-4">
-                        <div class="left-f">
-                            <img src="img/footerlogo.png" alt="">
+        <div class="container">
+            <section id="aboutUs">
+                <div class="about-us">
+                    <div class="waper-about-us">
+                        <div class="sep">
+                            <h2>Sobre Nós</h2>
+                        </div>
+                        <div class="AboutUs">
+                            <p>Você está na <em><strong> MegaSport</strong></em>, o melhor lugar para encontrar <em> produtos de desporto.</em><br>
+                            <em> Sabia que nós trabalhamos apenas com os fornecedores mais confiáveis do mercado?</em> Pois é! Isso significa que todos os produtos que você encontrar no nosso site certamente serão da <strong><em>mais alta qualidade.</em></strong>  <br>
+                            Vá em frente! Aqui na <em><strong> MegaSport</strong></em>, nós acreditamos num serviço de atendimento aos clientes de altíssima qualidade – mas também somos da opinião de que todos os nossos clientes merecem vivenciar uma experiência de compra inesquecível, e é por isso que tentamos proporcionar <strong><em> produtos excelentes a um preço acessível.</em></strong></p>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <ul class="lista-footer">
-                            <li class="list-title">MegaSport</li>
-                            <li><a href="">Sobre nós</a></li>
-                            <li><a href="">Lojas</a></li>
-                            <li><a href="">Contactos</a></li>
-                            <li><a href="">Opiniões</a></li>
+                </div>
+            </section>
+            <div class="wrapper1">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <ul class="list-gender"> 
+                            <li class="li-title">Homem</li>
+                            <li class="regular-li"><a href="#">Futebol</a></li>
+                            <li class="regular-li"><a href="#">Natação</a></li>
+                            <li class="regular-li"><a href="#">Bodybuilding</a></li>
+                            <li class="regular-li"><a href="#">Basketball</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4">
-                        <ul class="lista-footer">
-                            <li class="list-title">Contactos</li>
-                            <li><a href="">+351 911 911 911</a></li>
-                            <li><a href="">MegaSport@email.pt</a></li>
-                            <li><a href="">Segunda a sexta das 8:30 ás 18:00</a></li>
-                            <li><a href="">Dar Opinião</a></li>
+                    <div class="col-sm-6">
+                        <ul class="list-gender">
+                            <li class="li-title">Mulher</li>
+                            <li class="regular-li"><a href="#">Futebol</a></li>
+                            <li class="regular-li"><a href="#">Natação</a></li>
+                            <li class="regular-li"><a href="#">Bodybuilding</a></li>
+                            <li class="regular-li"><a href="#">Basketball</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer-rights">
-            <div class="text-footer">
-                <p>2021 ©MegaSport. Desenvolvido por Joel Araújo, Marco Araújo, Diogo Silva.</p>
+            <div class="waper-horario">
+                <div class="sep">
+                    <h2>Horário de funcionamento</h2>
+                </div>
+                <table>
+                    <colgroup span="5"></colgroup>
+                    <thead>
+                        <tr class="header">
+                            <th>Segunda</th>
+                            <th>Terça</th>
+                            <th>Quarta</th>
+                            <th>Quinta</th>
+                            <th>Sexta</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>8:30 ás 18:00</td>
+                            <td>8:30 ás 18:00</td>
+                            <td>8:30 ás 18:00</td>
+                            <td>8:30 ás 18:00</td>
+                            <td>8:30 ás 18:00</td>
+                        </tr>                                       
+                    </tbody>
+                    <tfoot><tr>
+                        <td colspan="5" style="text-align:center">
+                        Fechado aos fins de semana.</td></tr></tfoot>                                    
+                </table>
             </div>
         </div>
-    </footer>
-    <!-- JQUERY -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!-- Header-footer js -->
-    <script src="js/header-footer.js"></script>
-    <!-- indexjs -->
-    <script src="js/index.js"></script>
-</body>
-</html>
+
+        <footer>
+            <div class="ava">
+                <div class="ava-content">
+                    <h2>Estamos Dispostos a Ouvi-lo</h2>
+                    <button class="but form-redir">Dar Opinião</button>   
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="footer-container">
+                    <div class="row row-footer">
+                        <div class="col-sm-4">
+                            <div class="left-f">
+                                <img src="img/footerlogo.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <ul class="lista-footer">
+                                <li class="list-title">MegaSport</li>
+                                <li><a href="#aboutUs">Sobre nós</a></li>
+                                <li><a href="">Lojas</a></li>
+                                <li><a href="">Contactos</a></li>
+                                <li><a href="">Opiniões</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <ul class="lista-footer">
+                                <li class="list-title">Contactos</li>
+                                <li><a href="">+351 911 911 911</a></li>
+                                <li><a href="">MegaSport@email.pt</a></li>
+                                <li><a href="">Abertos das 8:30 as 18:00</a></li>
+                                <li><a href="">Dar Opinião</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-rights">
+                <div class="text-footer">
+                    <p>2021 ©MegaSport. Desenvolvido por Joel Araújo, Marco Araújo, Diogo Silva.</p>
+                </div>
+            </div>
+        </footer>
+        <!-- JQUERY -->
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <!-- Header-footer js -->
+        <script src="js/header-footer.js"></script>
+        <!-- indexjs -->
+        <script src="js/index.js"></script>
+    </body>
+    </html>
