--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="right-header">
                     <ul class="filter-gender">
-                        <li class="filter-g-item"><a class="main-h" onclick="filtroSexo('Homem'); return false;">Homem</a></li>
-                        <li class="filter-g-item"><a class="main-h" onclick="filtroSexo('Mulher'); return false;">Mulher</a></li>
+                        <li class="filter-g-item hHomem"><a class="main-h" onclick="filtroSexo('Homem'); return false;">Homem</a></li>
+                        <li class="filter-g-item hMulher"><a class="main-h" onclick="filtroSexo('Mulher'); return false;">Mulher</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,10 +63,10 @@
                     <div class="col-sm-6">
                         <ul class="list-gender"> 
                             <li class="li-title">Homem</li>
-                            <li class="regular-li fut"><a href="#">Futebol</a></li>
-                            <li class="regular-li"><a href="#">Natação</a></li>
-                            <li class="regular-li"><a href="#">Bodybuilding</a></li>
-                            <li class="regular-li"><a href="#">Basketball</a></li>
+                            <li class="regular-li fut" id="futbol"><a onclick="triggerMan('Futebol'); return false;">Futebol</a></li>
+                            <li class="regular-li nat"><a onclick="triggerMan('Natação'); return false;">Natação</a></li>
+                            <li class="regular-li bodyb"><a onclick="triggerMan('Bodybuilding'); return false;">Bodybuilding</a></li>
+                            <li class="regular-li basket"><a onclick="triggerMan('Basquetebol'); return false;">Basketball</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
