--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -63,19 +63,19 @@
                     <div class="col-sm-6">
                         <ul class="list-gender"> 
                             <li class="li-title">Homem</li>
-                            <li class="regular-li fut" id="futbol"><a onclick="triggerMan('Futebol'); return false;">Futebol</a></li>
-                            <li class="regular-li nat"><a onclick="triggerMan('Natação'); return false;">Natação</a></li>
-                            <li class="regular-li bodyb"><a onclick="triggerMan('Bodybuilding'); return false;">Bodybuilding</a></li>
-                            <li class="regular-li basket"><a onclick="triggerMan('Basquetebol'); return false;">Basketball</a></li>
+                            <li class="regular-li" id="futbol"><a onclick="triggerMan('Futebol'); return false;">Futebol</a></li>
+                            <li class="regular-li"><a onclick="triggerMan('Natação'); return false;">Natação</a></li>
+                            <li class="regular-li"><a onclick="triggerMan('Bodybuilding'); return false;">Bodybuilding</a></li>
+                            <li class="regular-li"><a onclick="triggerMan('Basquetebol'); return false;">Basketball</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <ul class="list-gender">
                             <li class="li-title">Mulher</li>
-                            <li class="regular-li"><a href="#">Futebol</a></li>
-                            <li class="regular-li"><a href="#">Natação</a></li>
-                            <li class="regular-li"><a href="#">Bodybuilding</a></li>
-                            <li class="regular-li"><a href="#">Basketball</a></li>
+                            <li class="regular-li"><a onclick="triggerWoman('Futebol'); return false;">Futebol</a></li>
+                            <li class="regular-li"><a onclick="triggerWoman('Natação'); return false;">Natação</a></li>
+                            <li class="regular-li"><a onclick="triggerWoman('Bodybuilding'); return false;">Bodybuilding</a></li>
+                            <li class="regular-li"><a onclick="triggerWoman('Basquetebol'); return false;">Basketball</a></li>
                         </ul>
                     </div>
                 </div>
