--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="container">
-        <form method="post">
+        <form method="post" action="form.php">
             <div class="title-area">
                 <h2>Preencha o formulário para dar a sua opinião</h2>
                 <h3>Seja o mais honesto possível</h3>
@@ -78,7 +78,7 @@
                 </div> 
 
                 <div class="submit-area">
-                    <input type="submit" class="but-sub" value="Submeter">
+                    <input type="submit" name="submit" class="but-sub" value="Submeter">
                 </div>
             </div>
 
