--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -19,28 +19,28 @@
     <header id="header">
         <div class="upper">
             <div class="left-header">
-                <img src="img/h-logo.png" alt="MegaSport">
+                <img src="img/h-logo.png" onclick="clean(); return false;" alt="MegaSport">
             </div>
             <div class="right-header">
                 <ul class="filter-gender">
-                    <li class="filter-g-item"><a class="main-h" href="#">Homem</a></li>
-                    <li class="filter-g-item"><a class="main-h" href="#">Mulher</a></li>
+                    <li class="filter-g-item hHomem"><a class="main-h" onclick="filtroSexo('Homem'); return false;">Homem</a></li>
+                    <li class="filter-g-item hMulher"><a class="main-h" onclick="filtroSexo('Mulher'); return false;">Mulher</a></li>
                 </ul>
             </div>
         </div>
         
         <div class="submenus">
             <ul class="ul-sub">
-                <li class="sub-items"><a class="a-col" href="">Futebol</a></li>
-                <li class="sub-items"><a class="a-col" href="">Natação</a></li>
-                <li class="sub-items"><a class="a-col" href="">Bodybuilding</a> </li>
-                <li class="sub-items"><a class="a-col" href="">Basketball</a></li>
+                <li class="sub-items"><a class="a-col fut-click" onclick="filtroSport('Futebol'); return false;">Futebol</a></li>
+                <li class="sub-items"><a class="a-col" onclick="filtroSport('Natação'); return false;">Natação</a></li>
+                <li class="sub-items"><a class="a-col" onclick="filtroSport('Bodybuilding'); return false;">Bodybuilding</a> </li>
+                <li class="sub-items"><a class="a-col" onclick="filtroSport('Basquetebol'); return false;">Basketball</a></li>
             </ul>
         </div>
     </header>
 
     <div class="container">
-        <form method="post" action="form.php">
+        <form method="post" action="form.php" target="_blank">
             <div class="title-area">
                 <h2>Preencha o formulário para dar a sua opinião</h2>
                 <h3>Seja o mais honesto possível</h3>
