--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -68,7 +68,9 @@
         <div class="ava">
             <div class="ava-content">
                 <h2>Estamos Dispostos a Ouvi-lo</h2>
-                <button class="but form-redir">Dar Opinião</button>   
+                <div class="but-holder">
+                    <a class="but form-redir" href="form.html">Dar Opinião</a>
+                </div> 
             </div>
         </div>
         <div class="footer-bottom">
