--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -13,7 +13,7 @@
         <!-- index css stylesheet -->
         <link rel="stylesheet" href="css/index.css">
         <!-- define language characters -->
-        <meta charset="UTF-8">
+        <meta charset="UTF8" name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
         <header id="header">
@@ -115,7 +115,10 @@
             <div class="ava">
                 <div class="ava-content">
                     <h2>Estamos Dispostos a Ouvi-lo</h2>
-                    <button class="but form-redir">Dar Opinião</button>   
+                    <div class="but-holder">
+                        <a class="but form-redir" href="form.html">Dar Opinião</a>
+                    </div>
+                    
                 </div>
             </div>
             <div class="footer-bottom">
