--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -13,7 +13,7 @@
         <!-- index css stylesheet -->
         <link rel="stylesheet" href="css/index.css">
         <!-- define language characters -->
-        <meta charset="UTF8" name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta charset="UTF8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     </head>
     <body>
         <header id="header">
